<resources>
    <string name="app_name">DepEat</string>
    <string name="email_hint">Insert Email</string>
    <string name="passwd_hint">Insert password</string>
    <string name="login_text">Login</string>
    <string name="sign_in_text">Sign In</string>
    <string name="invalid_email">Insert a valid email</string>
    <string name="invalid_password">Insert a valid password</string>
    <string name="login_succeded">Login successful</string>
    <string name="phone_hint">Insert your phone number</string>
    <string name="checkout">Checkout</string>
    <string name="plus_btn">+</string>
    <string name="minus_btn">-</string>
    <string name="price_fixed_text">Price :</string>
    <string name="total_fixed_text">Total :</string>
    <string name="min_order_fixed_text">Min. order :</string>
    <string name="euro">€</string>
    <string name="pay">Pay</string>
    <string name="delete">Delete</string>
    <string name="food_name_fixed">Food name</string>
    <string name="food_quantity_fixed">Qta</string>
    <string name="amount_fixed">Amount</string>
    <string name="confirm_title">Confirm</string>
    <string name="confirm_question">Are you sure that you want to delete this item?</string>
    <string name="positive_text">Yes</string>
    <string name="nagative_text">No</string>
    <string name="user_hint">Insert username</string>
    <string name="profile_fixed">profile</string>
    <string name="change">change</string>
</resources>
