<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:gravity="center">




        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:id="@+id/email_et"
            android:hint="@string/email_hint"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:drawablePadding="5dp"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_et"
            android:hint="@string/passwd_hint"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
            android:drawablePadding="5dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingHorizontal="10dp"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            android:id="@+id/login_btn"
            android:background="@drawable/round_btn"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_text"
            android:id="@+id/register_btn"
            android:layout_marginTop="10dp" />



    </LinearLayout>

</LinearLayout>