<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">



            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:id="@+id/email_reg_et"
                android:hint="@string/email_hint"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:drawablePadding="5dp"/>




            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/passowrd_reg_et"
                android:hint="@string/passwd_hint"
                android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
                android:drawablePadding="5dp"/>




            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/phone_reg_et"
                android:hint="@string/user_hint"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:drawablePadding="5dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:paddingHorizontal="10dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_text"
            android:id="@+id/sign_in_reg_btn"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

</LinearLayout>