<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/restaurant_icon"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:padding="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_foreground" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/restaurant_name"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:gravity="left|bottom"
                android:paddingStart="20dp"
                android:paddingBottom="5dp"
                android:text="Panucci"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/restaurant_description"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:gravity="start"
                android:maxLines="3"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:text="A little description of Panucci"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/food_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/checkout_rv"
        android:layout_below="@id/header"
        android:layout_alignParentStart="true">

    </android.support.v7.widget.RecyclerView>

    <RelativeLayout
        android:id="@+id/checkout_rv"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/progress"
            android:layout_alignParentStart="true"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/total_fixed_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:text="@string/total_fixed_text" />

            <TextView
                android:id="@+id/total_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left|center"
                android:paddingLeft="10dp"
                tools:text="10,00 €" />

            <TextView
                android:id="@+id/min_order_fixed_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:text="@string/min_order_fixed_text" />

            <TextView
                android:id="@+id/min_order_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left|center"
                android:paddingLeft="10dp"
                tools:text="10,00 €" />
        </LinearLayout>


        <ProgressBar
            android:id="@+id/progress"
            style="@android:style/Widget.Material.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_above="@id/checkout_btn"
            android:padding="8dp" />

        <Button
            android:id="@+id/checkout_btn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:enabled="false"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/checkout" />

    </RelativeLayout>


</RelativeLayout>