<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_margin="4dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/food_iv"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_alignParentLeft="true"
                android:padding="10dp" />


            <TextView
                android:id="@+id/food_name"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_toLeftOf="@id/picker"
                android:layout_toRightOf="@id/food_iv"
                android:gravity="left|bottom"
                android:paddingStart="20dp"
                android:paddingBottom="5dp"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="Panucci" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/food_name"
                android:layout_toLeftOf="@id/picker"
                android:layout_toRightOf="@id/food_iv"
                android:weightSum="2">

                <TextView
                    android:id="@+id/food_fixed_price"
                    android:layout_width="128dp"
                    android:layout_height="36dp"
                    android:layout_below="@id/food_name"
                    android:layout_toLeftOf="@id/picker"
                    android:layout_toRightOf="@id/food_iv"
                    android:gravity="start"
                    android:paddingStart="20dp"
                    android:paddingTop="5dp"
                    android:textSize="12sp"
                    android:text="@string/price_fixed_text"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/food_price"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_below="@id/food_name"
                    android:layout_toRightOf="@id/food_fixed_price"
                    android:gravity="left"
                    android:paddingTop="5dp"
                    android:textSize="12sp"
                    tools:text="3.0€"
                    android:layout_weight="1"/>
            </LinearLayout>



            <RelativeLayout
                android:id="@+id/picker"
                android:layout_width="128dp"
                android:layout_height="96dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:orientation="horizontal">


                <LinearLayout
                    android:id="@+id/plus_btn_container"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true">

                    <Button
                        android:id="@+id/plus_btn"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_gravity="center"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:foreground="?attr/selectableItemBackground"
                        android:background="@drawable/round_btn"

                        android:text="@string/plus_btn" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/quantity_tv_container"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/plus_btn_container"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/quantity_tv"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:gravity="center"
                        tools:text="0"
                        android:background="@drawable/round_tv"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/minus_btn_container"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true">

                    <Button
                        android:id="@+id/minus_btn"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_gravity="center"
                        android:background="@drawable/round_btn"
                        android:foreground="?attr/selectableItemBackground"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:text="@string/minus_btn" />
                </LinearLayout>
            </RelativeLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>